--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('name') }}">Name</a>
           </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('user_update') }}">User Form</a>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
