--- a/templates/name.html
+++ b/templates/name.html
@@ -33,8 +33,14 @@
              <br>
              {{ form.email.label(class="form-label") }}
              {{ form.email(class="form-control") }}
-
+             <br>
+             {{ form.password.label(class="form-label") }}
+             {{ form.password(class="form-control") }}
              <br/>
+             {{ form.password2.label(class="form-label") }}
+             {{ form.password2(class="form-control") }}
+             <br/>
+             
              {{form.submit(class="btn btn-primary") }}
          </form>
 
