--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('user_update') }}">User Form</a>
+            <a class="nav-link" href="{{ url_for('login') }}">User Form</a>
           </li>
 
           <li class="nav-item dropdown">
