--- a/templates/name.html
+++ b/templates/name.html
@@ -42,6 +42,9 @@
              <br/>
              
              {{form.submit(class="btn btn-primary") }}
+         </form><br>
+         <form action="{{ url_for('logout') }}" method="post">
+            <Button class="btn btn-danger">Logout</Button>
          </form>
 
     {% endif %}
